[Refactor] Auth Validation 리팩토링(config 폴더에 validation만 정리한 파일 생성) - Register, Login 하단 여백 생성

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -7,6 +7,7 @@
   width: $mainContentWidth;
   margin: 0 auto;
   padding-top: $navPaddingTop;
+  padding-bottom: 144px;
 
   .RegisterMainWrap {
     .registerWrap {
