--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -7,6 +7,7 @@
   width: $mainContentWidth;
   margin: 0 auto;
   padding-top: $navPaddingTop;
+  padding-bottom: 144px;
 
   .RegisterMainWrap {
     .registerWrap {
